k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-mini-service
  namespace: cloud-mini

spec:
  selector:
    app: cloud-native-mini

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
